--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v2
 
     - name: set up python
-      used: actions/setup-python@v2
+      uses: actions/setup-python@v2
       with:
         python-version: '3.9'
 
